fixed wrap

--- a/Starter-League-Project-2/boxmodelcss.css
+++ b/Starter-League-Project-2/boxmodelcss.css
@@ -50,7 +50,7 @@ table {
 /* Reset Fix */
 
 .wrap {
-	width:960px;
+	width:900px;
 	margin:0 auto;
 }
 /*
